@@ -111,9 +111,10 @@ Please note that our support for the checkout block is still experimental and th
 * Fix - Fatal error on thank you page for deleted orders.
 * Add - Error messages when dispute evidence exceeds Stripe limits.
 * Fix - Onboarding must be completed before Subscriptions products can be published.
-* Add - Support business account branding settings
+* Fix - Show the prices in the correct currency when using the "All Products" block.
+* Add - Support business account branding settings.
 * Update - Capture order-related metadata not captured by mobile app for in-person payment transactions.
-* Add - REST endpoint to print IPP receipts
+* Add - REST endpoint to print IPP receipts.
 
 = 3.3.0 - 2021-11-18 =
 * Add - Add Idempotency Key to POST headers.
