@@ -16,9 +16,10 @@
 * Add - Export Disputes to CSV
 * Update - Remove "Boost your sales by accepting new payment methods" from the overview tasks list.
 * Fix - Onboarding must be completed before Subscriptions products can be published.
-* Add - Support business account branding settings
+* Fix - Show the prices in the correct currency when using the "All Products" block.
+* Add - Support business account branding settings.
 * Update - Capture order-related metadata not captured by mobile app for in-person payment transactions.
-* Add - REST endpoint to print IPP receipts
+* Add - REST endpoint to print IPP receipts.
 
 = 3.3.0 - 2021-11-18 =
 * Add - Add Idempotency Key to POST headers.
